--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-*.iml
 .gradle
 /local.properties
 /.idea/workspace.xml
@@ -6,3 +5,36 @@
 .DS_Store
 /build
 /captures
+# built application files
+*.apk
+*.ap_
+
+# files for the dex VM
+*.dex
+
+# Java class files
+*.class
+
+# generated files
+bin/
+gen/
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+# Eclipse stuff
+.classpath
+.project
+.settings
+
+# Gradle stuff
+.gradle/
+build/
+.idea/
+out/
+*.iml
+
+com_crashlytics_export_strings.xml
+aita/crashlytics.properties
+aita/src/main/assets/crashlytics-build.properties
+*.log
