--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: android
+jdk: oraclejdk8
+
 android:
   components:
     - tools
@@ -6,5 +8,8 @@ android:
     - build-tools-24.0.1
     - android-24
 
+before_install:
+		- chmod +x gradlew
+
 script:
-   - ./gradlew build
+   - ./gradlew clean assemble
