--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ android:
     - platform-tools
     - build-tools-24.0.1
     - android-24
+    - extra-android-m2repository
 
 before_install:
     - chmod +x gradlew
